# airflow

./: .env  .gitignore  404.html  docker-compose.yaml  index.html  mkdocs.yaml  objects.inv  pyproject.toml
Configurando Ambiente/configuracao_ambiente/: index.html
Configurando Ambiente/instalar_docker/: index.html
Introdução ao Airflow/Visão do webserver/: index.html
dags/: banco_dados_pg.py  branchs.py  consumer.py  dag_complexa.py  dag_group.py  dag_run_dag1.py  dag_run_dag2.py  default_args.py  dummy.py  email.py  hooks.py  pools.py  primeira_dag.py  producer.py  py_operator.py  python_operator.py  quarta_dag.py  segunda_dag.py  terceira_dag.py  teste.py  trigger_dag1.py  trigger_dag2.py  trigger_dag3.py  variavel.py  xcom.py
docs/: index.md
docs/Configurando Ambiente/: configuracao_ambiente.md  instalar_docker.md
search/: search_index.json
