[tool.poetry]
name = "airflow"
version = "0.1.0"
description = ""
authors = ["oseiasdfarias <oseias.dfarias@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
mkdocstrings-python = "^1.10.3"
mkdocstrings = "^0.25.1"
mkdocs-macros-plugin = "^1.0.5"
pymdown-extensions = "^10.8.1"
mkdocs-material = "^9.5.25"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
